--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.5.0",
+    "bn.js": "^5.2.0",
     "chai": "^4.3.6",
+    "chai-bn": "^0.3.1",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
